46823 theme : remove absolute postioning from calendar event location to prevent ugly wrapping

--- a/theme/arup/less/legacy/calendar.less
+++ b/theme/arup/less/legacy/calendar.less
@@ -186,9 +186,8 @@ div.maincalendar table.calendarmonth td li.cancelled a {
 }
 
 .path-calendar .maincalendar .eventlist .event .location {
-    position: absolute;
-    right: 6px; /* match padding in tabs */
-    margin-top: 28px;
+    float: right;
+    margin-right: 6px; /* match padding in tabs */
 }
 
 .path-calendar .maincalendar .event.calendar_event_lunchandlearn .description {
